Updating to team roster

--- a/homepage.Rmd
+++ b/homepage.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Homepage"
-author: "HanChen Wang"
+author: "Coach HanChen"
 date: "`r Sys.Date()`"
 output: html_document
 ---
@@ -11,26 +11,26 @@ knitr::opts_chunk$set(echo = TRUE)
 
 ## Team Roster (listed in alphabetical order)
 ### Players
-Alex Cheng
-Andy Wang
-Ceaser Goddard
-Johnny Li
-Joshua Chong
-Joshua Mytton
-Matthew Jefferson 
-Naren Radhakrishnan
-Noah Schick
-Quintin Liu
-Shaan Mehta
-Tyson April
+Alex Cheng  
+Andy Wang  
+Ceaser Goddard  
+Johnny Li  
+Joshua Chong  
+Joshua Mytton  
+Matthew Jefferson   
+Naren Radhakrishnan  
+Noah Schick  
+Quintin Liu  
+Shaan Mehta  
+Tyson April  
 
 ### Practice players
-Bill Phan
-Johnny Chen
-Ryan Hsu
+Bill Phan  
+Johnny Chen  
+Ryan Hsu  
 
 ### Managers
-Cidy Runya
-Krystelle Baldos
+Cidy Runya  
+Krystelle Baldos  
 
 
